--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.19",
     "@types/react-dom": "18.2.7",
     "@types/react-slick": "^0.23.10",
+    "apexcharts": "^3.42.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "eslint": "8.47.0",
@@ -22,6 +23,7 @@
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-select": "^5.7.4",
